Replace ModalPane, seems to be the more consistent fix for the indicator not showing
IDK whats wrong with ModalPane but its not been working while I've been fiddling on some unpublished work. Just doing it with a plain StackPane fixes the issue.

--- a/recaf-ui/src/main/resources/style/tweaks.css
+++ b/recaf-ui/src/main/resources/style/tweaks.css
@@ -73,6 +73,9 @@
 .background-dark {
     -fx-background-color: -color-bg-overlay !important;
 }
+.background-dark-transparent {
+    -fx-background-color: rgba(0, 0, 0, 0.25) !important;
+}
 
 /* Tweak the larger titles to not be bold (which looks rather ugly in most cases) */
 .title-1 {
